--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.project_ver1/com.example.project_ver1.HelloApplication</mainClass>
+              <mainClass>com.example.project_ver1/com.example.project_ver1.HomeApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
